# AndroidOpenCv3.1

app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/dannykwon/androidopencv31/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/dannykwon/androidopencv31/: MainActivity.java
app/src/main/java/com/example/dannykwon/androidopencv31/hough/: HoughActivity.java
app/src/main/java/com/example/dannykwon/androidopencv31/hough/line/: HoughLine.java  Line.java  Line2D.java
app/src/main/java/com/example/dannykwon/androidopencv31/hough/pref/: PreferencesActivity.java  ResetPreference.java
app/src/main/java/com/example/dannykwon/androidopencv31/hough/transform/: HoughCircles2D.java  HoughCircles3D.java  HoughLineTransform.java  HoughLines.java
app/src/main/jni/: Android.mk
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/test/java/com/example/dannykwon/androidopencv31/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary310/: build.gradle
